--- a/src/main/resources/templates/fragments/adminPanel.html
+++ b/src/main/resources/templates/fragments/adminPanel.html
@@ -3,7 +3,7 @@
     <div id="clientTableContainer" class="container">
         <div class="row">
             <div class="">
-                <table id="clientsTable" class="table table-bordered" style="width: 100%">
+                <table id="clientsTable" class="table table-bordered table-hover" style="width: 100%">
                     <thead>
                     <tr>
                         <th>Name: </th>
