--- a/src/main/resources/templates/panel.html
+++ b/src/main/resources/templates/panel.html
@@ -28,7 +28,7 @@
       <!-- Navigation bar -->
       <th:block sec:authorize="hasRole('ADMIN')" th:replace="~{fragments\adminPanel.html :: navbar}"></th:block>
 
-    <div class="shadow-lg p-3 mb-5 bg-body-tertiary rounded card center" style="width: 30%;">
+    <div class="shadow-lg p-3 mb-5 bg-body-tertiary rounded card center">
       <h4>Witamy w panelu klienta!</h4>
       
       <!-- Wykaz klientów i faktór: -->
