--- a/src/main/resources/templates/fragments/client.html
+++ b/src/main/resources/templates/fragments/client.html
@@ -84,6 +84,7 @@
           </tr>
         </thead>
         <tbody>
+          <th th:if="${products.isEmpty()}" scope="row" colspan="9">There are no products for this client</th>
           <tr th:each="product : ${products}">
             <th scope="row" th:text="${products.indexOf(product)} + 1"></th>
             <td th:text="${product.productEnum}"></td>
@@ -97,6 +98,10 @@
           </tr>
         </tbody>
       </table>
+      <button th:unless="${addProduct}" type="button" class="btn btn-primary btn-sm" 
+        th:attr="hx-get=|/addProduct/${client.nip}|"
+        hx-target="#mainContent"
+        >dodaj produkt</button>
 </div>
 
 <div th:fragment="clientFaktury" class="table-responsive">
