--- a/src/main/resources/templates/fragments/adminPanel.html
+++ b/src/main/resources/templates/fragments/adminPanel.html
@@ -53,11 +53,8 @@
                 <li class="nav-item">
                     <a class="nav-link active" href="/" >Klienci i platnosci</a>
                 </li>
-            <li class="nav-item">
-                    <a class="nav-link" href="#">Klienci</a>
-                </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Fakturki</a>
+                    <a class="nav-link" href="#">Wystaw fakturę</a>
                 </li>
             </ul>
         </div>
