--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -28,6 +28,13 @@
       <!-- Navigation bar -->
       <th:block sec:authorize="hasRole('ADMIN')" th:replace="~{fragments\adminPanel.html :: navbar}"></th:block>
 
+
+      
+      <!-- test -->
+      <!-- <div hx-get="getUtility/8992767015" hx-trigger="load" hx-swap="outerHTML"></div> -->
+
+
+
       <div id="mainContent" class="shadow-lg p-3 mb-5 bg-body-tertiary rounded card center">
          <h4>Witamy w panelu klienta!</h4>
          
