--- a/src/main/resources/templates/fragments/client.html
+++ b/src/main/resources/templates/fragments/client.html
@@ -124,7 +124,7 @@
         </tbody>
     </table>
       
-    <div class="">
+    <div th:unless="${onlyUtilitiesInvoices}" class="">
         <button class="btn btn-primary" type="submit">wyślij fakturę czynszową</button>
         <button class="btn btn-primary" type="submit" 
           th:attr="hx-get=|/getUtility/${client?.nip}|"
