env variable added + spring security enchancement

--- a/src/main/resources/templates/fragments/client.html
+++ b/src/main/resources/templates/fragments/client.html
@@ -104,7 +104,7 @@
         >dodaj produkt</button>
 </div>
 
-<div th:fragment="clientFaktury" class="table-responsive">
+<div th:fragment="clientFaktury" class="table-responsive" id="clientFaktury">
     <table class="table table-hover">
         <thead>
           <tr>
@@ -125,7 +125,10 @@
     </table>
       
     <div th:unless="${onlyUtilitiesInvoices}" class="">
-        <button class="btn btn-primary" type="submit">wyślij fakturę czynszową</button>
+        <button class="btn btn-primary" type="submit" 
+          th:attr="hx-get=|/sendInvoice/${client?.nip}|"
+          hx-target="#clientFaktury"
+          >wyślij fakturę czynszową</button>
         <button class="btn btn-primary" type="submit" 
           th:attr="hx-get=|/getUtility/${client?.nip}|"
           hx-target="#mainContent"
