--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -32,7 +32,7 @@
       
       <!-- test -->
       <!-- <div hx-get="getUtility/8992767015" hx-trigger="load" hx-swap="outerHTML"></div> -->
-      wyslanie faktury za media (problem z autoryzacja) <br>
+      api jako env variable <br>
       wyswietlanie faktur rowniez z sama woda<br>
 
 
