--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -32,8 +32,10 @@
       
       <!-- test -->
       <!-- <div hx-get="getUtility/8992767015" hx-trigger="load" hx-swap="outerHTML"></div> -->
-      api jako env variable <br>
-      wyswietlanie faktur rowniez z sama woda<br>
+      wyslij pojedyncza fakture czynszowa<br>
+      panel klienta<br>
+      komunikat -> czego nie zrobił<br>
+         i dlaczego tego nie zrobił<br>
 
 
       <div id="mainContent" class="shadow-lg p-3 mb-5 bg-body-tertiary rounded card center">
